fixed overflow in mobile view

--- a/css/custom.css
+++ b/css/custom.css
@@ -91,6 +91,10 @@ float: right;
   padding-bottom: 20px; 
 }
 
+#landing, #home, #contact, #projects, #footer {
+	overflow-x: hidden;
+}
+
 /* Support styling for mobile view  */
 @media screen and (max-width: 700px) {
 	.landing-page {
